[package]
name = "easy-sdl3-text"
version = "0.1.0"
edition = "2024"
license = "Creative Commons Zero v1.0 Universal"
description = "Easy text rendering for sdl3 (includes sub-pixel rendering)"
repository = "https://github.com/What42Pizza/easy-sdl3-text"
readme = "README.md"
keywords = ["sdl3", "text", "rendering", "subpixel", "ttf"]
categories = ["rendering", "graphics", "gui"]

[dependencies]
sdl3 = "0.14"
ab_glyph = "0.2"
rayon = "1"

[dev-dependencies]
anyhow = "1.0.99"
