[package]
name = "easy-sdl3-text"
version = "0.3.1"
edition = "2024"
license = "CC0-1.0"
description = "Easy text rendering for sdl3 (including sub-pixel rendering)"
repository = "https://github.com/What42Pizza/easy-sdl3-text"
readme = "README.md"
keywords = ["sdl3", "sdl", "text", "subpixel", "ttf"]
categories = ["rendering", "graphics", "gui"]

[dependencies]
sdl3 = "0.14"
ab_glyph = "0.2"
rayon = "1"

[dev-dependencies]
anyhow = "1.0.99"
